<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Register user strings -->

    <string name="register_name">Name</string>
    <string name="register_birthday">Birthday</string>
    <string name="register_email">E-mail</string>
    <string name="register_email_confirmation">E-mail confirmation</string>
    <string name="register_login">Login</string>
    <string name="register_password">Password</string>
    <string name="register_password_confirmation">Password confirmation</string>

</resources>