...
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/username"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
...
